@@ -1,4 +1,8 @@
-﻿drkns 16.08.2014 01:21:40 +0200 - build 4046
+﻿drkns 16.08.2014 14:49:31 +0200 - build 4047
+
+1. 0002768: Быстрый просмотр – не та область плагинов
+
+drkns 16.08.2014 01:21:40 +0200 - build 4046
 
 1. Рефакторинг.
 
